# link_budget

./: .gitignore  LICENSE  README.md
aau_station/: aau_model.npy  aau_states.npy  create_markov.ipynb  discrete_markov_11_year_model.csv  discrete_markov_11_year_states.csv  discrete_markov_2_year.csv  fetch.ipynb
mani_rain_package/: LICENSE  README.md  pyproject.toml
mani_rain_package/examples/: ceb.ipynb  markov_model.ipynb
mani_rain_package/mani_rain/: __init__.py  _core.py  _dvbs2.py  linkbudget.py
mani_rain_package/mani_rain/rain/: __init__.py  _rain_core.py  _rain_markov.py  itu.py
mani_rain_package/mani_rain/rain/models/: aau_ma_model.npy  aau_ma_states.npy  nn_model_ma.npy  nn_states_ma.npy
markov_models/aau_station/: create_markov.ipynb
markov_models/nn_station/: nn_processing.ipynb
nn_station/: nn_model.csv  nn_model.npy  nn_processing.ipynb  nn_states.csv  nn_states.npy
src/: link_budget.ipynb
