[project]
name = "mani_rain"
version = "0.4.4"
authors = [
  { name="Jonas Jakobsen", email="jojako21@student.aau.dk" },
  { name="Rasmus Dybkjær", email="rdybkj21@student.aau.dk" },
]
description = "Rain prediction and link budgeting, for a lunar orbiter, using ESA DSA"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "itur",
]

[tool.setuptools.package-data]
"mani_rain" = ["rain/models/*"]